comment out all but arm64

--- a/.vsts.release.yml
+++ b/.vsts.release.yml
@@ -33,153 +33,153 @@ stages:
 - stage: Build
   dependsOn: Create_Release_Branch
   jobs:
-  ################################################################################
-  - job: build_windows_agent_x64
-  ################################################################################
-    displayName: Windows Agent (x64)
-    pool:
-      vmImage: vs2017-win2016
-    variables:
-      layoutRoot: '_layout\win-x64'
-    steps:
+  # ################################################################################
+  # - job: build_windows_agent_x64
+  # ################################################################################
+  #   displayName: Windows Agent (x64)
+  #   pool:
+  #     vmImage: vs2017-win2016
+  #   variables:
+  #     layoutRoot: '_layout\win-x64'
+  #   steps:
 
-    # Steps template for windows platform
-    - template: .vsts.template.windows.yml
-      parameters:
-        testLogTitle: 'Windows-x64'
+  #   # Steps template for windows platform
+  #   - template: .vsts.template.windows.yml
+  #     parameters:
+  #       testLogTitle: 'Windows-x64'
 
-    # Package .NET Core Windows dependency (VC++ Redistributable)
-    - template: .azure-pipelines/package-vcredist.yml
-      parameters:
-        layoutRoot: ${{ variables.layoutRoot }}
-        flavor: 'x64'
+  #   # Package .NET Core Windows dependency (VC++ Redistributable)
+  #   - template: .azure-pipelines/package-vcredist.yml
+  #     parameters:
+  #       layoutRoot: ${{ variables.layoutRoot }}
+  #       flavor: 'x64'
 
-    # Signing steps
-    - template: .azure-pipelines/signing.yml
-      parameters:
-        layoutRoot: ${{ variables.layoutRoot }}
+  #   # Signing steps
+  #   - template: .azure-pipelines/signing.yml
+  #     parameters:
+  #       layoutRoot: ${{ variables.layoutRoot }}
 
-    # Create agent package zip
-    - script: dev.cmd package Release
-      workingDirectory: src
-      displayName: Package Release
+  #   # Create agent package zip
+  #   - script: dev.cmd package Release
+  #     workingDirectory: src
+  #     displayName: Package Release
 
-    # Upload agent package zip as build artifact
-    - task: PublishBuildArtifacts@1
-      displayName: Publish Artifact (Windows)
-      inputs:
-        pathToPublish: _package
-        artifactName: agent
-        artifactType: container
+  #   # Upload agent package zip as build artifact
+  #   - task: PublishBuildArtifacts@1
+  #     displayName: Publish Artifact (Windows)
+  #     inputs:
+  #       pathToPublish: _package
+  #       artifactName: agent
+  #       artifactType: container
 
-    # Verify all binaries are signed (generate report)
-    - task: securedevelopmentteam.vss-secure-development-tools.build-task-codesignvalidation.CodesignValidation@0
-      displayName: 'Generate Codesign Report'
-      inputs:
-        path: '$(layoutRoot)'
+  #   # Verify all binaries are signed (generate report)
+  #   - task: securedevelopmentteam.vss-secure-development-tools.build-task-codesignvalidation.CodesignValidation@0
+  #     displayName: 'Generate Codesign Report'
+  #     inputs:
+  #       path: '$(layoutRoot)'
 
-    # Verify all binaries are signed (check report)
-    - task: securedevelopmentteam.vss-secure-development-tools.build-task-postanalysis.PostAnalysis@1
-      displayName: 'Verify Codesign Report'
-      inputs:
-        CodesignValidation: true
-        CodesignValidationBreakOn: WarningAbove
-        ToolLogsNotFoundAction: Error
+  #   # Verify all binaries are signed (check report)
+  #   - task: securedevelopmentteam.vss-secure-development-tools.build-task-postanalysis.PostAnalysis@1
+  #     displayName: 'Verify Codesign Report'
+  #     inputs:
+  #       CodesignValidation: true
+  #       CodesignValidationBreakOn: WarningAbove
+  #       ToolLogsNotFoundAction: Error
 
-  ################################################################################
-  - job: build_windows_agent_x86
-  ################################################################################
-    displayName: Windows Agent (x86)
-    pool:
-      name: buildDevs
-      demands: 'Agent.OSArchitecture -equals X86'
-    variables:
-      layoutRoot: '_layout\win-x86'
-    steps:
+  # ################################################################################
+  # - job: build_windows_agent_x86
+  # ################################################################################
+  #   displayName: Windows Agent (x86)
+  #   pool:
+  #     name: buildDevs
+  #     demands: 'Agent.OSArchitecture -equals X86'
+  #   variables:
+  #     layoutRoot: '_layout\win-x86'
+  #   steps:
 
-    # Steps template for windows platform
-    - template: .vsts.template.windows.yml
-      parameters:
-        testLogTitle: 'Windows-x86'
+  #   # Steps template for windows platform
+  #   - template: .vsts.template.windows.yml
+  #     parameters:
+  #       testLogTitle: 'Windows-x86'
 
-    # Package .NET Core Windows dependency (VC++ Redistributable)
-    - template: .azure-pipelines/package-vcredist.yml
-      parameters:
-        layoutRoot: ${{ variables.layoutRoot }}
-        flavor: 'x86'
+  #   # Package .NET Core Windows dependency (VC++ Redistributable)
+  #   - template: .azure-pipelines/package-vcredist.yml
+  #     parameters:
+  #       layoutRoot: ${{ variables.layoutRoot }}
+  #       flavor: 'x86'
 
-    # Signing steps
-    - template: .azure-pipelines/signing.yml
-      parameters:
-        layoutRoot: ${{ variables.layoutRoot }}
+  #   # Signing steps
+  #   - template: .azure-pipelines/signing.yml
+  #     parameters:
+  #       layoutRoot: ${{ variables.layoutRoot }}
 
-    # Create agent package zip
-    - script: dev.cmd package Release
-      workingDirectory: src
-      displayName: Package Release
+  #   # Create agent package zip
+  #   - script: dev.cmd package Release
+  #     workingDirectory: src
+  #     displayName: Package Release
 
-    # Upload agent package zip as build artifact
-    - task: PublishBuildArtifacts@1
-      displayName: Publish Artifact (Windows)
-      inputs:
-        pathToPublish: _package
-        artifactName: agent
-        artifactType: container
+  #   # Upload agent package zip as build artifact
+  #   - task: PublishBuildArtifacts@1
+  #     displayName: Publish Artifact (Windows)
+  #     inputs:
+  #       pathToPublish: _package
+  #       artifactName: agent
+  #       artifactType: container
 
-  ################################################################################
-  - job: build_linux_agent_x64
-  ################################################################################
-    displayName: Linux Agent (x64)
-    pool:
-      vmImage: ubuntu-16.04
-    steps:
+  # ################################################################################
+  # - job: build_linux_agent_x64
+  # ################################################################################
+  #   displayName: Linux Agent (x64)
+  #   pool:
+  #     vmImage: ubuntu-16.04
+  #   steps:
 
-    # Steps template for non-windows platform
-    - template: .vsts.template.nonwindows.yml
-      parameters:
-        testLogTitle: 'Linux-x64'
+  #   # Steps template for non-windows platform
+  #   - template: .vsts.template.nonwindows.yml
+  #     parameters:
+  #       testLogTitle: 'Linux-x64'
 
-    # Create agent package zip
-    - script: ./dev.sh package Release
-      workingDirectory: src
-      displayName: Package Release
+  #   # Create agent package zip
+  #   - script: ./dev.sh package Release
+  #     workingDirectory: src
+  #     displayName: Package Release
 
-    # Upload agent package zip as build artifact
-    - task: PublishBuildArtifacts@1
-      displayName: Publish Artifact (Linux)
-      inputs:
-        pathToPublish: _package
-        artifactName: agent
-        artifactType: container
+  #   # Upload agent package zip as build artifact
+  #   - task: PublishBuildArtifacts@1
+  #     displayName: Publish Artifact (Linux)
+  #     inputs:
+  #       pathToPublish: _package
+  #       artifactName: agent
+  #       artifactType: container
 
-  ################################################################################
-  - job: build_linux_agent_arm
-  ################################################################################
-    displayName: Linux Agent (ARM)
-    pool:
-      name: buildDevs
-      demands: 'Agent.OSArchitecture -equals ARM'
-    container: dotnetcore_arm
-    timeoutInMinutes: 75
-    steps:
+  # ################################################################################
+  # - job: build_linux_agent_arm
+  # ################################################################################
+  #   displayName: Linux Agent (ARM)
+  #   pool:
+  #     name: buildDevs
+  #     demands: 'Agent.OSArchitecture -equals ARM'
+  #   container: dotnetcore_arm
+  #   timeoutInMinutes: 75
+  #   steps:
 
-    # Steps template for non-windows platform
-    - template: .vsts.template.nonwindows.yml
-      parameters:
-        testLogTitle: 'Linux-ARM'
+  #   # Steps template for non-windows platform
+  #   - template: .vsts.template.nonwindows.yml
+  #     parameters:
+  #       testLogTitle: 'Linux-ARM'
 
-    # Create agent package zip
-    - script: ./dev.sh package Release
-      workingDirectory: src
-      displayName: Package Release
+  #   # Create agent package zip
+  #   - script: ./dev.sh package Release
+  #     workingDirectory: src
+  #     displayName: Package Release
 
-    # Upload agent package zip as build artifact
-    - task: PublishBuildArtifacts@1
-      displayName: Publish Artifact (Linux)
-      inputs:
-        pathToPublish: _package
-        artifactName: agent
-        artifactType: container
+  #   # Upload agent package zip as build artifact
+  #   - task: PublishBuildArtifacts@1
+  #     displayName: Publish Artifact (Linux)
+  #     inputs:
+  #       pathToPublish: _package
+  #       artifactName: agent
+  #       artifactType: container
 
   ################################################################################
   - job: build_linux_agent_arm64
@@ -210,58 +210,58 @@ stages:
         artifactName: agent
         artifactType: container
 
-  ################################################################################
-  - job: build_rhel6_agent_x64
-  ################################################################################
-    displayName: RHEL6 Agent (x64)
-    pool:
-      vmImage: ubuntu-16.04
-    container: dotnetcore_centos6
-    steps:
+  # ################################################################################
+  # - job: build_rhel6_agent_x64
+  # ################################################################################
+  #   displayName: RHEL6 Agent (x64)
+  #   pool:
+  #     vmImage: ubuntu-16.04
+  #   container: dotnetcore_centos6
+  #   steps:
 
-    # Steps template for non-windows platform
-    - template: .vsts.template.nonwindows.yml
-      parameters:
-        testLogTitle: 'RHEL-x64'
+  #   # Steps template for non-windows platform
+  #   - template: .vsts.template.nonwindows.yml
+  #     parameters:
+  #       testLogTitle: 'RHEL-x64'
 
-    # Create agent package zip
-    - script: ./dev.sh package Release
-      workingDirectory: src
-      displayName: Package Release
+  #   # Create agent package zip
+  #   - script: ./dev.sh package Release
+  #     workingDirectory: src
+  #     displayName: Package Release
 
-    # Upload agent package zip as build artifact
-    - task: PublishBuildArtifacts@1
-      displayName: Publish Artifact (RHEL6 x64)
-      inputs:
-        pathToPublish: _package
-        artifactName: agent
-        artifactType: container
+  #   # Upload agent package zip as build artifact
+  #   - task: PublishBuildArtifacts@1
+  #     displayName: Publish Artifact (RHEL6 x64)
+  #     inputs:
+  #       pathToPublish: _package
+  #       artifactName: agent
+  #       artifactType: container
 
-  ################################################################################
-  - job: build_osx_agent
-  ################################################################################
-    displayName: macOS Agent (x64)
-    pool:
-      vmImage: macOS-10.14
-    steps:
+  # ################################################################################
+  # - job: build_osx_agent
+  # ################################################################################
+  #   displayName: macOS Agent (x64)
+  #   pool:
+  #     vmImage: macOS-10.14
+  #   steps:
 
-    # Steps template for non-windows platform
-    - template: .vsts.template.nonwindows.yml
-      parameters:
-        testLogTitle: 'macOS-x64'
+  #   # Steps template for non-windows platform
+  #   - template: .vsts.template.nonwindows.yml
+  #     parameters:
+  #       testLogTitle: 'macOS-x64'
 
-    # Create agent package zip
-    - script: ./dev.sh package Release
-      workingDirectory: src
-      displayName: Package Release
+  #   # Create agent package zip
+  #   - script: ./dev.sh package Release
+  #     workingDirectory: src
+  #     displayName: Package Release
 
-    # Upload agent package zip as build artifact
-    - task: PublishBuildArtifacts@1
-      displayName: Publish Artifact (OSX)
-      inputs:
-        pathToPublish: _package
-        artifactName: agent
-        artifactType: container
+  #   # Upload agent package zip as build artifact
+  #   - task: PublishBuildArtifacts@1
+  #     displayName: Publish Artifact (OSX)
+  #     inputs:
+  #       pathToPublish: _package
+  #       artifactName: agent
+  #       artifactType: container
 
 - stage: Release
   dependsOn: Build
@@ -319,69 +319,69 @@ stages:
         Publish-AzureRmCdnEndpointContent -EndpointName vstsagentpackage -ProfileName vstsagentpackage -ResourceGroupName vstsagentpackage -LoadContent $uploadFiles
       displayName: Upload to Azure Blob
 
-    # Create agent release on Github
-    - powershell: |
-        Write-Host "Creating github release."
-        $releaseNotes = [System.IO.File]::ReadAllText("$(Build.SourcesDirectory)\releaseNote.md").Replace("<AGENT_VERSION>","$(ReleaseAgentVersion)")
-        $releaseData = @{
-          tag_name = "v$(ReleaseAgentVersion)";
-          target_commitish = "$(Build.SourceVersion)";
-          name = "v$(ReleaseAgentVersion)";
-          body = $releaseNotes;
-          draft = $false;
-          prerelease = $true;
-        }
-        $releaseParams = @{
-          Uri = "https://api.github.com/repos/Microsoft/azure-pipelines-agent/releases";
-          Method = 'POST';
-          Headers = @{
-            Authorization = 'Basic ' + [Convert]::ToBase64String([Text.Encoding]::ASCII.GetBytes("vsts:$(GithubToken)"));
-          }
-          ContentType = 'application/json';
-          Body = (ConvertTo-Json $releaseData -Compress)
-        }
-        [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12
-        $releaseCreated = Invoke-RestMethod @releaseParams
-        Write-Host $releaseCreated
-        $releaseId = $releaseCreated.id
-        $assets = [System.IO.File]::ReadAllText("$(Build.SourcesDirectory)\assets.json").Replace("<AGENT_VERSION>","$(ReleaseAgentVersion)")
-        $assetsParams = @{
-          Uri = "https://uploads.github.com/repos/Microsoft/azure-pipelines-agent/releases/$releaseId/assets?name=assets.json"
-          Method = 'POST';
-          Headers = @{
-            Authorization = 'Basic ' + [Convert]::ToBase64String([Text.Encoding]::ASCII.GetBytes("vsts:$(GithubToken)"));
-          }
-          ContentType = 'application/octet-stream';
-          Body = [system.Text.Encoding]::UTF8.GetBytes($assets)
-        }
-        Invoke-RestMethod @assetsParams
-      displayName: Create agent release on Github
+#     # Create agent release on Github
+#     - powershell: |
+#         Write-Host "Creating github release."
+#         $releaseNotes = [System.IO.File]::ReadAllText("$(Build.SourcesDirectory)\releaseNote.md").Replace("<AGENT_VERSION>","$(ReleaseAgentVersion)")
+#         $releaseData = @{
+#           tag_name = "v$(ReleaseAgentVersion)";
+#           target_commitish = "$(Build.SourceVersion)";
+#           name = "v$(ReleaseAgentVersion)";
+#           body = $releaseNotes;
+#           draft = $false;
+#           prerelease = $true;
+#         }
+#         $releaseParams = @{
+#           Uri = "https://api.github.com/repos/Microsoft/azure-pipelines-agent/releases";
+#           Method = 'POST';
+#           Headers = @{
+#             Authorization = 'Basic ' + [Convert]::ToBase64String([Text.Encoding]::ASCII.GetBytes("vsts:$(GithubToken)"));
+#           }
+#           ContentType = 'application/json';
+#           Body = (ConvertTo-Json $releaseData -Compress)
+#         }
+#         [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12
+#         $releaseCreated = Invoke-RestMethod @releaseParams
+#         Write-Host $releaseCreated
+#         $releaseId = $releaseCreated.id
+#         $assets = [System.IO.File]::ReadAllText("$(Build.SourcesDirectory)\assets.json").Replace("<AGENT_VERSION>","$(ReleaseAgentVersion)")
+#         $assetsParams = @{
+#           Uri = "https://uploads.github.com/repos/Microsoft/azure-pipelines-agent/releases/$releaseId/assets?name=assets.json"
+#           Method = 'POST';
+#           Headers = @{
+#             Authorization = 'Basic ' + [Convert]::ToBase64String([Text.Encoding]::ASCII.GetBytes("vsts:$(GithubToken)"));
+#           }
+#           ContentType = 'application/octet-stream';
+#           Body = [system.Text.Encoding]::UTF8.GetBytes($assets)
+#         }
+#         Invoke-RestMethod @assetsParams
+#       displayName: Create agent release on Github
 
-- stage: CreatePRs
-  dependsOn: Release
-  jobs:
-  ################################################################################
-  - job: create_ado_prs
-  ################################################################################
-    displayName: Create PRs in AzureDevOps
-    pool:
-      vmImage: ubuntu-18.04
+# - stage: CreatePRs
+#   dependsOn: Release
+#   jobs:
+#   ################################################################################
+#   - job: create_ado_prs
+#   ################################################################################
+#     displayName: Create PRs in AzureDevOps
+#     pool:
+#       vmImage: ubuntu-18.04
 
-    steps:
-    - checkout: self
+#     steps:
+#     - checkout: self
 
-    - script: git checkout releases/$(version)
-      condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
-      displayName: Checkout release branch
+#     - script: git checkout releases/$(version)
+#       condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
+#       displayName: Checkout release branch
 
-    - bash: |
-        set -x
-        cd release
-        npm install
-        ls
-        node createAdoPrs.js $(version)
-      displayName: Create PRs in AzureDevOps and AzureDevOps.ConfigChange
-      condition: ne(variables['version'], '')
-      env:
-        USER: $(User)
-        PAT: $(AdoPAT)
+#     - bash: |
+#         set -x
+#         cd release
+#         npm install
+#         ls
+#         node createAdoPrs.js $(version)
+#       displayName: Create PRs in AzureDevOps and AzureDevOps.ConfigChange
+#       condition: ne(variables['version'], '')
+#       env:
+#         USER: $(User)
+#         PAT: $(AdoPAT)
